Изменил докерфайлы и добавил Blazor-клиент (шаблон)

--- a/GRPC/GRPC.csproj
+++ b/GRPC/GRPC.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>c7bcd16b-fdd9-4316-85a6-3dafd1abfd1e</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
