--- a/REST/Dockerfile
+++ b/REST/Dockerfile
@@ -7,18 +7,18 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["GRPC/GRPC.csproj", "GRPC/"]
+COPY ["REST/REST.csproj", "REST/"]
 COPY ["Dto/Dto.csproj", "Dto/"]
 COPY ["Services/Services.csproj", "Services/"]
-RUN dotnet restore "GRPC/GRPC.csproj"
+RUN dotnet restore "REST/REST.csproj"
 COPY . .
-WORKDIR "/src/GRPC"
-RUN dotnet build "GRPC.csproj" -c Release -o /app/build
+WORKDIR "/src/REST"
+RUN dotnet build "REST.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "GRPC.csproj" -c Release -o /app/publish
+RUN dotnet publish "REST.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "GRPC.dll"]
+ENTRYPOINT ["dotnet", "REST.dll"]
