--- a/DBCreator/App.config
+++ b/DBCreator/App.config
@@ -5,6 +5,6 @@
     <!-- Число строк в базе Employee -->
     <add key="RowsCount" value="1000000"/>
     <!-- Число строк, которые мы вставляем в Employee одним INSERT INTO -->
-    <add key="Party" value="1000000"/>
+    <add key="Party" value="1000"/>
   </appSettings>
 </configuration>
