--- a/DBCreator/DBCreator.csproj
+++ b/DBCreator/DBCreator.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="FluentMigrator" Version="3.3.1" />
     <PackageReference Include="FluentMigrator.Extensions.Postgres" Version="3.3.1" />
     <PackageReference Include="FluentMigrator.Runner" Version="3.3.1" />
+    <PackageReference Include="Npgsql" Version="6.0.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
