Пофиксил скрипты, уменьшил количество данных в БД

--- a/DBCreator/App.config
+++ b/DBCreator/App.config
@@ -3,7 +3,7 @@
   <!-- При изменении настроек учтите, что RowsCount, деленное на Party, должно дать натуральное число!!! -->
   <appSettings>
     <!-- Число строк в базе Employee -->
-    <add key="RowsCount" value="1000000"/>
+    <add key="RowsCount" value="100000"/>
     <!-- Число строк, которые мы вставляем в Employee одним INSERT INTO -->
     <add key="Party" value="1000"/>
   </appSettings>
